--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "node-cron": "^4.2.0"
+    "node-cron": "^4.2.0",
+    "dotenv": "^17.1.0"
   }
 }
